<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">respeakerApp</string>
    <string name="action_settings">Settings</string>
    <string name="record_button">RECORD</string>
    <string name="respeak_button">RESPEAK</string>
    <string name="transcribe_button">TRANSCRIBE</string>
    <string name="title_activity_record">Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="record_button_description">Press to record</string>
    <string name="stop_button_description">Press to stop</string>
    <string name="save_button_description">Press to save</string>
    <string name="trash_button_description">Press to delete</string>
    <string name="title_activity_respeak">Respeak</string>
    <string name="title_activity_transcribe">Transcribe</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_file_explorer">FileExplorerActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_time_stretch">TimeStretchActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_query">Save recording as:</string>
    <string name="menu_record">Click to start recording</string>
    <string name="menu_respeak">Click to start respeaking</string>
    <string name="menu_transcribe">Click to start transcribing</string>

</resources>