<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    
    <ImageButton
    android:id="@+id/record_button"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/menu_record"
    android:contentDescription="@string/menu_record"
    android:onClick="startRecordActivity" />
    
    <ImageButton
    android:id="@+id/respeak_button"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/menu_respeak"
    android:contentDescription="@string/menu_respeak" />
        
    <ImageButton
    android:id="@+id/transcribe_button"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/menu_transcribe"
    android:contentDescription="@string/menu_transcribe" />

</LinearLayout>