<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
   <LinearLayout
    android:id="@+id/button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:orientation="vertical" >
    
	   	<ImageButton
    	android:id="@+id/record_icon"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"	
    	android:src="@drawable/record_logo"
    	android:contentDescription="@string/record_button_description" />
	   	<!-- android:layout_marginRight="20dp" -->
	   	
	   	<Chronometer 
    	android:id="@+id/chronometer" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:textSize="30sp"
    	/> 
	</LinearLayout>  	
	<LinearLayout
    android:id="@+id/other_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >
	   	
	   	<ImageButton
    	android:id="@+id/save_icon"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/stop"
    	android:contentDescription="@string/save_button_description" />
	   	
	   	<ImageButton
    	android:id="@+id/trash_icon"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/stop"
    	android:contentDescription="@string/trash_button_description" />
    
	</LinearLayout>
        
</RelativeLayout>